--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "doc": "jsdoc -c .jsdocrc",
     "esm": "cjstoesm \"dist/**/*.*\" out && eslint dist/** --fix",
-    "test": "mocha --require intelli-espower-loader test"
+    "test": "mocha --require intelli-espower-loader test",
+    "testReport": "nyc --reporter=html --reporter=text mocha --require intelli-espower-loader test",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +22,7 @@
     "jsdoc": "^3.6.3",
     "jsdoc-template": "^1.2.0",
     "mocha": "^7.1.1",
+    "nyc": "^15.0.1",
     "power-assert": "^1.6.1",
     "typescript": "^3.8.3"
   },
