--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/parser": "^7.10.1",
+    "@babel/traverse": "^7.10.1",
     "coveralls": "^3.0.13",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
@@ -21,14 +23,13 @@
     "intelli-espower-loader": "^1.0.1",
     "jsdoc": "^3.6.3",
     "jsdoc-template": "^1.2.0",
+    "jsdom": "^16.2.2",
     "mocha": "^7.1.1",
     "nyc": "^15.0.1",
     "power-assert": "^1.6.1",
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@babel/parser": "^7.10.1",
-    "@babel/traverse": "^7.10.1",
     "duplexer3": "^0.1.4"
   }
 }
