fix: 修复 DOM 测试中 coverage.json 会互相覆盖的问题

--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "scripts": {
     "doc": "jsdoc -c .jsdocrc",
-    "build": "node build/build.js",
+    "build": "node script/build.js",
     "test:unit": "mocha --require intelli-espower-loader --exclude 'test/dom/**/*.test.js' --recursive",
-    "test:dom": "node build/mocha-puppeteer.js",
+    "test:dom": "node script/mocha-puppeteer.js",
     "test": "npm run test:unit && npm run test:dom",
-    "cover:unit": "nyc --silent --no-clean npm run test:unit",
+    "cover:unit": "nyc --silent npm run test:unit",
     "cover:dom": "nyc --silent --no-clean npm run test:dom",
     "cover:report": "nyc report --reporter=html --reporter=text --temp-dir .nyc_output",
     "cover": "npm run cover:unit && npm run cover:dom && npm run cover:report",
