build: 添加 dom debug 配置

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "doc": "jsdoc -c .jsdocrc",
     "build": "node script/build.js",
     "test:unit": "mocha --require intelli-espower-loader --exclude 'test/dom/**/*.test.js' --recursive",
-    "test:dom": "node script/mocha-puppeteer.js",
+    "test:dom": "node script/domTest.js",
+    "debug:dom": "node script/domDebug.js",
     "test": "npm run test:unit && npm run test:dom",
     "cover:unit": "nyc --silent npm run test:unit",
     "cover:dom": "nyc --silent --no-clean npm run test:dom",
