test: 添加 react 测试

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,11 @@
 {
+  "presets": [
+    "@babel/env",
+    "@babel/react"
+  ],
   "plugins": [
-    "babel-plugin-espower"
+    "babel-plugin-espower",
+    "@babel/plugin-proposal-export-default-from",
+    "@babel/plugin-proposal-class-properties"
   ]
 }
