--- a/package.json
+++ b/package.json
@@ -6,46 +6,62 @@
   "scripts": {
     "doc": "jsdoc -c .jsdocrc",
     "build": "node script/build.js",
-    "test:unit": "mocha",
+    "test:unit": "mocha --config ./test/.mocharc.js",
     "test:dom": "node script/domTest.js",
-    "test": "npm run test:unit && npm run test:dom",
+    "test:react": "mocha --config ./test/react/.mocharc.js",
+    "test": "npm run test:unit && npm run test:dom && npm run test:react",
     "debug:unit": "mocha --inspect-brk",
     "debug:dom": "node script/domDebug.js",
+    "debug:react": "mocha --config ./test/react/.mocharc.js --inspect-brk",
     "cover:unit": "nyc --silent npm run test:unit",
     "cover:dom": "nyc --silent --no-clean npm run test:dom",
+    "cover:react": "nyc --silent --no-clean npm run test:react",
     "cover:report": "nyc report --reporter=html --reporter=text --temp-dir .nyc_output",
-    "cover": "npm run cover:unit && npm run cover:dom && npm run cover:report",
+    "cover": "npm run cover:unit && npm run cover:dom && npm run cover:react && npm run cover:report",
     "coveralls": "npm run cover && nyc report --reporter=text-lcov | coveralls"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.1",
     "@babel/parser": "^7.10.1",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-export-default-from": "^7.10.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/register": "^7.11.5",
     "@babel/traverse": "^7.10.1",
     "@rollup/plugin-commonjs": "^13.0.0",
     "@rollup/plugin-node-resolve": "^8.0.1",
+    "babel-eslint": "^10.1.0",
     "babel-plugin-espower": "^3.0.1",
     "coveralls": "^3.0.13",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.4",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-react": "^7.20.6",
     "ink-docstrap": "^1.3.2",
     "intelli-espower-loader": "^1.0.1",
     "jsdoc": "^3.6.3",
     "jsdoc-template": "^1.2.0",
-    "jsdom": "^16.2.2",
+    "jsdom": "^16.4.0",
     "mocha": "^7.1.1",
     "mocha-sinon": "^2.1.2",
     "nyc": "^15.0.1",
     "power-assert": "^1.6.1",
     "puppeteer": "^4.0.0",
+    "react-dom": "^16.13.1",
     "rollup": "^2.17.0",
     "rollup-plugin-istanbul": "^2.0.1",
     "sinon": "^9.0.2",
     "uuid": "^8.3.0"
   },
   "dependencies": {
-    "duplexer3": "^0.1.4"
+    "duplexer3": "^0.1.4",
+    "react": "^16.13.1"
   }
 }
