feat: visibleTimeout 和 visibleInterval 方法

--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "doc": "jsdoc -c .jsdocrc",
     "build": "node script/build.js",
     "test:unit": "mocha --config ./test/.mocharc.js",
-    "test:dom": "node script/domTest.js",
+    "test:browser": "node script/browserTest.js",
     "test:react": "mocha --config ./test/react/.mocharc.js",
-    "test": "npm run test:unit && npm run test:dom && npm run test:react",
+    "test": "npm run test:unit && npm run test:browser && npm run test:react",
     "debug:unit": "mocha --inspect-brk",
-    "debug:dom": "node script/domDebug.js",
+    "debug:browser": "node script/browserDebug.js",
     "debug:react": "mocha --config ./test/react/.mocharc.js --inspect-brk",
     "cover:unit": "nyc --silent npm run test:unit",
-    "cover:dom": "nyc --silent --no-clean npm run test:dom",
+    "cover:browser": "nyc --silent --no-clean npm run test:browser",
     "cover:react": "nyc --silent --no-clean npm run test:react",
     "cover:report": "nyc report --reporter=html --reporter=text --temp-dir .nyc_output",
-    "cover": "npm run cover:unit && npm run cover:dom && npm run cover:react && npm run cover:report",
+    "cover": "npm run cover:unit && npm run cover:browser && npm run cover:react && npm run cover:report",
     "coveralls": "npm run cover && nyc report --reporter=text-lcov | coveralls"
   },
   "author": "",
