--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@rollup/plugin-commonjs": "^13.0.0",
     "@rollup/plugin-node-resolve": "^8.0.1",
     "babel-eslint": "^10.1.0",
+    "@typescript-eslint/eslint-plugin": "^3.9.0",
+    "@typescript-eslint/parser": "^3.9.0",
     "babel-plugin-espower": "^3.0.1",
     "coveralls": "^3.0.13",
     "enzyme": "^3.11.0",
@@ -58,6 +60,9 @@
     "rollup": "^2.17.0",
     "rollup-plugin-istanbul": "^2.0.1",
     "sinon": "^9.0.2",
+    "sucrase": "^3.15.0",
+    "tslint": "^6.1.3",
+    "typescript": "^3.9.7",
     "uuid": "^8.3.0"
   },
   "dependencies": {
