build: 修改测试方法

--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "doc": "jsdoc -c .jsdocrc",
     "build": "bin/build",
-    "test:unit": "cross-env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha --config ./test/.mocharc.js",
+    "test:unit": "mocha --config ./test/.mocharc.js",
     "test:browser": "node script/test/browserTest.js",
     "test:react": "mocha --config ./test/react/.mocharc.js",
     "test": "npm run test:unit && npm run test:browser && npm run test:react",
-    "debug:unit": "mocha --inspect-brk",
+    "debug:unit": "npm run test:unit -- --inspect-brk",
     "debug:browser": "node script/test/browserDebug.js",
-    "debug:react": "mocha --config ./test/react/.mocharc.js --inspect-brk",
+    "debug:react": "npm run test:react -- --inspect-brk",
     "cover:unit": "nyc --silent npm run test:unit",
     "cover:browser": "nyc --silent --no-clean npm run test:browser",
     "cover:react": "nyc --silent --no-clean npm run test:react",
@@ -33,6 +33,7 @@
     "@babel/plugin-transform-typescript": "^7.11.0",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
     "@babel/register": "^7.11.5",
     "@babel/traverse": "^7.10.1",
     "@babel/types": "^7.11.5",
@@ -40,11 +41,11 @@
     "@rollup/plugin-node-resolve": "^8.0.1",
     "@rollup/plugin-typescript": "^6.0.0",
     "@types/mocha": "^8.0.3",
+    "@types/node": "^14.11.5",
     "@typescript-eslint/eslint-plugin": "^3.9.0",
     "@typescript-eslint/parser": "^3.9.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-espower": "^3.0.1",
-    "babel-plugin-transform-react-createelement-to-jsx": "^1.1.0",
     "commander": "^6.1.0",
     "coveralls": "^3.0.13",
     "cross-env": "^7.0.2",
@@ -55,11 +56,12 @@
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-react": "^7.20.6",
     "ink-docstrap": "^1.3.2",
-    "intelli-espower-loader": "^1.0.1",
     "jsdoc": "^3.6.3",
     "jsdoc-template": "^1.2.0",
     "jsdom": "^16.4.0",
-    "mocha": "^7.1.1",
+    "koa": "^2.13.0",
+    "koa-static": "^5.0.0",
+    "mocha": "^7.2.0",
     "mocha-sinon": "^2.1.2",
     "nyc": "^15.0.1",
     "power-assert": "^1.6.1",
@@ -69,10 +71,6 @@
     "rollup": "^2.17.0",
     "rollup-plugin-istanbul": "^2.0.1",
     "sinon": "^9.0.2",
-    "sucrase": "^3.15.0",
-    "ts-node": "^9.0.0",
-    "tslib": "^2.0.1",
-    "tslint": "^6.1.3",
     "typescript": "^3.9.7",
     "uuid": "^8.3.0"
   },
