--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-vue": "^7.1.0",
     "jsdom": "^16.4.0",
     "koa": "^2.13.0",
     "koa-static": "^5.0.0",
@@ -78,6 +79,9 @@
   },
   "dependencies": {
     "duplexer3": "^0.1.4",
-    "react": "^16.13.1"
+    "react": "^16.13.1",
+    "vue": "^2.6.12",
+    "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^9.0.2"
   }
 }
