refactor: 调整目录结构

--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
   "scripts": {
     "doc": "typedoc",
     "build": "bin/build",
-    "test:unit": "mocha --config ./test/.mocharc.js",
+    "test:common": "mocha --config ./test/common/.mocharc.js",
+    "test:node": "mocha --config ./test/node/.mocharc.js",
     "test:browser": "node script/test/browserTest.js",
     "test:react": "mocha --config ./test/react/.mocharc.js",
-    "test": "npm run test:unit && npm run test:browser && npm run test:react",
+    "test": "npm run test:common && npm run test:node && npm run test:browser && npm run test:react",
     "debug:unit": "npm run test:unit -- --inspect-brk",
     "debug:browser": "node script/test/browserDebug.js",
     "debug:react": "npm run test:react -- --inspect-brk",
-    "cover:unit": "nyc --silent npm run test:unit",
+    "cover:common": "nyc --silent npm run test:common",
+    "cover:node": "nyc --silent npm run test:node",
     "cover:browser": "nyc --silent --no-clean npm run test:browser",
     "cover:react": "nyc --silent --no-clean npm run test:react",
     "cover:report": "nyc report --reporter=html --reporter=text --temp-dir .nyc_output",
-    "cover": "npm run cover:unit && npm run cover:browser && npm run cover:react && npm run cover:report",
+    "cover": "npm run cover:common && npm run cover:node && npm run cover:browser && npm run cover:react && npm run cover:report",
     "coveralls": "npm run cover && nyc report --reporter=text-lcov | coveralls"
   },
   "author": "",
