--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.1",
     "@babel/generator": "^7.11.6",
+    "@babel/helper-plugin-utils": "^7.10.4",
     "@babel/parser": "^7.10.1",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-export-default-from": "^7.10.4",
@@ -48,6 +49,7 @@
     "@types/react": "^16.9.51",
     "@typescript-eslint/eslint-plugin": "^3.9.0",
     "@typescript-eslint/parser": "^3.9.0",
+    "@vue/component-compiler-utils": "^3.2.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-espower": "^3.0.1",
     "commander": "^6.1.0",
@@ -77,7 +79,8 @@
     "typedoc-neo-theme": "^1.0.10",
     "typedoc-plugin-external-module-name": "^4.0.3",
     "typescript": "^4.0.5",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "vue-template-compiler": "^2.6.12"
   },
   "dependencies": {
     "duplexer3": "^0.1.4",
