test: 从 mocha 迁移到 jest

--- a/package.json
+++ b/package.json
@@ -6,20 +6,15 @@
   "scripts": {
     "doc": "typedoc",
     "build": "bin/build",
-    "test:common": "mocha --config ./test/common/.mocharc.js",
-    "test:node": "mocha --config ./test/node/.mocharc.js",
+    "test:node": "jest --config ./jest.config.ts",
     "test:browser": "node script/test/browserTest.js",
-    "test:react": "mocha --config ./test/react/.mocharc.js",
-    "test": "npm run test:common && npm run test:node && npm run test:browser && npm run test:react",
-    "debug:unit": "npm run test:unit -- --inspect-brk",
+    "debug:node": "node --inspect-brk ./node_modules/.bin/jest --config ./jest.config.ts",
     "debug:browser": "node script/test/browserDebug.js",
-    "debug:react": "npm run test:react -- --inspect-brk",
-    "cover:common": "nyc --silent npm run test:common",
-    "cover:node": "nyc --silent --no-clean npm run test:node",
+    "cover:node": "jest --config ./jest.config.ts --coverage",
     "cover:browser": "nyc --silent --no-clean npm run test:browser",
-    "cover:react": "nyc --silent --no-clean npm run test:react",
     "cover:report": "nyc report --reporter=html --reporter=text --temp-dir .nyc_output",
-    "cover": "npm run cover:common && npm run cover:node && npm run cover:browser && npm run cover:react && npm run cover:report",
+    "cover:clean": "nyc --clean echo",
+    "cover": "npm run cover:clean && npm run cover:node && npm run cover:browser && npm run cover:report",
     "coveralls": "npm run cover && nyc report --reporter=text-lcov | coveralls"
   },
   "author": "",
@@ -44,14 +39,16 @@
     "@rollup/plugin-commonjs": "^13.0.0",
     "@rollup/plugin-node-resolve": "^8.0.1",
     "@rollup/plugin-typescript": "^6.0.0",
-    "@types/mocha": "^8.0.3",
+    "@types/jest": "^26.0.15",
     "@types/node": "^14.11.5",
     "@types/react": "^16.9.51",
     "@typescript-eslint/eslint-plugin": "^3.9.0",
     "@typescript-eslint/parser": "^3.9.0",
     "@vue/component-compiler-utils": "^3.2.0",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.3",
     "babel-plugin-espower": "^3.0.1",
+    "babel-preset-power-assert": "^3.0.0",
     "commander": "^6.1.0",
     "coveralls": "^3.0.13",
     "cross-env": "^7.0.2",
@@ -62,11 +59,12 @@
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-vue": "^7.1.0",
+    "jest": "^26.6.3",
+    "jest-sinon": "^1.0.4",
     "jsdom": "^16.4.0",
     "koa": "^2.13.0",
     "koa-static": "^5.0.0",
     "mocha": "^7.2.0",
-    "mocha-sinon": "^2.1.2",
     "nyc": "^15.0.1",
     "power-assert": "^1.6.1",
     "puppeteer": "^4.0.0",
@@ -75,6 +73,8 @@
     "rollup": "^2.17.0",
     "rollup-plugin-istanbul": "^2.0.1",
     "sinon": "^9.0.2",
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.0.0",
     "typedoc": "^0.19.2",
     "typedoc-neo-theme": "^1.0.10",
     "typedoc-plugin-external-module-name": "^4.0.3",
