--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@typescript-eslint/eslint-plugin": "^3.9.0",
     "@typescript-eslint/parser": "^3.9.0",
     "@vue/component-compiler-utils": "^3.2.0",
+    "@vue/test-utils": "^1.1.1",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "babel-plugin-espower": "^3.0.1",
@@ -62,6 +64,7 @@
     "jest": "^26.6.3",
     "jest-sinon": "^1.0.4",
     "jsdom": "^16.4.0",
+    "jsdom-global": "^3.0.2",
     "koa": "^2.13.0",
     "koa-static": "^5.0.0",
     "mocha": "^7.2.0",
@@ -80,6 +83,7 @@
     "typedoc-plugin-external-module-name": "^4.0.3",
     "typescript": "^4.0.5",
     "uuid": "^8.3.0",
+    "vue-jest": "^3.0.7",
     "vue-template-compiler": "^2.6.12"
   },
   "dependencies": {
