--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "@babel/traverse": "^7.10.1",
     "@babel/types": "^7.11.5",
     "@rollup/plugin-commonjs": "^13.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.1",
     "@rollup/plugin-typescript": "^6.0.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.11.5",
@@ -74,7 +73,7 @@
     "react-dom": "^16.13.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.17.0",
-    "rollup-plugin-istanbul": "^2.0.1",
+    "rollup-plugin-istanbul2": "^2.0.2",
     "sinon": "^9.0.2",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
