feat: 移除 LazyShow.vue

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,11 @@
       "scripthost"
     ]
   },
+  "paths": {
+    "@/*": [
+      "./src/*"
+    ]
+  },
   "include": [
     "src/**/*.ts",
     "src/**/*.tsx",
