--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@rollup/plugin-typescript": "^6.0.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.11.5",
+    "@types/power-assert": "^1.5.3",
     "@types/react": "^16.9.51",
     "@typescript-eslint/eslint-plugin": "^3.9.0",
     "@typescript-eslint/parser": "^3.9.0",
@@ -57,6 +58,7 @@
     "enzyme-adapter-react-16": "^1.15.4",
     "eslint": "^7.11.0",
     "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-vue": "^7.1.0",
