--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
   },
   "dependencies": {
     "duplexer3": "^0.1.4",
+    "html2json": "^1.0.2",
     "react": "^16.13.1",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
