--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/node": "^14.11.5",
     "@types/power-assert": "^1.5.3",
     "@types/react": "^16.9.51",
+    "@types/sinon": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^3.9.0",
     "@typescript-eslint/parser": "^3.9.0",
     "@vue/component-compiler-utils": "^3.2.0",
