chore: ts strict

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es6",
     "module": "esnext",
-    "strict": false,
+    "strict": true,
     "jsx": "react",
     "importHelpers": false,
     "experimentalDecorators": true,
